--- a/templates/vhost/apache.erb
+++ b/templates/vhost/apache.erb
@@ -1,6 +1,6 @@
 <%- if @engine == 'php' -%>
     <FilesMatch \.php$>
-        SetHandler proxy:fcgi://127.0.0.1:9000
+        SetHandler proxy:<%= @fcgi_listen %>
     </FilesMatch>
 <%- end -%>
 
