--- a/templates/vhost/apache.erb
+++ b/templates/vhost/apache.erb
@@ -1,13 +1,13 @@
 <%- if @engine_match and @engine_listen -%>
-    <FilesMatch <%= @engine_match %>>
-        SetHandler proxy:<%= @engine_listen %>
-    </FilesMatch>
+    ProxyPassMatch "<%= @engine_match %>" "<%= @engine_listen %><%= @path %>"
 <%- end -%>
 
-<%- Array(@apps).each do |app| -%>
-    <FilesMatch <%= app['match'] %>>
-        SetHandler proxy:<%= app['listen'] %>
-    </FilesMatch>
+<%- @apps.each do |name,app| -%>
+    <%- if app['listen'] -%>
+        ProxyPassMatch "<%= app['match'] %>" "<%= app['listen'] %>"
+    <%- elsif app['script'] -%>
+        ProxyPassMatch "<%= app['match'] %>" "<%= @engine_listen %><%= app['script'] %>"
+    <%- end -%>
 <%- end -%>
 
 <%- if @custom_fragment -%>
